添加redis hmget和hmset
